--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,7 @@ body {
   display: grid;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  gap: 30px;
+  margin-bottom: 30px;
   position: relative;
   z-index: 2;
   top: 15px;
@@ -205,7 +205,7 @@ body {
   display: grid;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  gap: 30px;
+  margin-bottom: 30px;
 }
 
 .second-section .boxes .box {
