--- a/styles/style.css
+++ b/styles/style.css
@@ -220,6 +220,7 @@ body {
       grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
+  margin-bottom: 30px;
   cursor: pointer;
 }
 
