--- a/styles/style.css
+++ b/styles/style.css
@@ -232,6 +232,7 @@ body {
   margin-top: 30px;
   margin-bottom: 0;
   font-weight: 700;
+  font-size: 13px;
 }
 
 .second-section .boxes .box .number {
