--- a/styles/style.scss
+++ b/styles/style.scss
@@ -73,6 +73,7 @@ body {
           border-radius: 100%;
           margin-left: -4px;
           transition: all 0.5s ease;
+          transform: translateX(20px);
           cursor: pointer;
         }
       }
