--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,7 @@ body {
   margin-left: -4px;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  transform: translateX(20px);
   cursor: pointer;
 }
 
